    - Don't segfault when there are syntax errors in translate_menus
      (Closes: #221757)
    - Unknown identifiers now generates a warning instead of an error.
    - Implement a replace() function. Closes: #223948
    - Modify basename() function to do as advertised in the documentation.
    - When conversion for a translated menu section failed, fallback to the
    original string.
  * Update Dutch menu message translation. Closes: #230525. Thanks Tim
    Dijkstra.
  * Add Chinese menu messages and sections translations. Closes: #232403.
    Thanks Carlos Z.F. Liu and Yongtao Yang.

 -- Bill Allombert <ballombe@debian.org>  Sat, 24 Jan 2004 19:45:43 +0100

menu (2.1.9-5) unstable; urgency=low

  * The "calc inflates severity" release. 
  * Add Polish menu message translation and update Polish menu section
    translation. Thanks Marcin Owsiany.
  * Update French menu section translation. Closes: #225716. Thanks
    Jean-Philippe Guérard.
  * Fix typos in error messages. Closes: #227070. Thanks Tommi Vainikainen.
  * Add Finnish translations. Closes: #227038. Thanks Tommi Vainikainen.
  * Add Brazillian menu message translation. Closes: #227627. Thanks Gustavo 
    Noronha Silva. 
  * Add GPL boiler-plate to all C++ source files.
  * Add Dutch menu message translation. Closes: #228221. Thanks Tim Dijkstra.
  * Remove documentation of non-existent function process_menudirs.  
    Closes: #228448. Thanks Chris Cheney.
  * Fix userprefix() and rootprefix() functions. Closes: #228628. Thanks Chris
    Cheney.
  * Add Czech menu section translation. Closes: #229203. Thanks Miroslav Kure.
  * Morten Brix Pedersen:
    - Update Danish sections translation and convert to UTF-8.
    - Update Danish menu translation and convert to UTF-8.

 -- Bill Allombert <ballombe@debian.org>  Sat, 24 Jan 2004 15:43:43 +0100

menu (2.1.9-4) unstable; urgency=low

  * The "Happy New Year" release. 
  * Add Polish menu message translation and update menu section translation.